--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,14 @@ dev_dependencies:
   flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "images/users.png"
+    ios: true
+    android: true
+    image_path_ios: "images/users.png"
+    image_path_android: "images/users.png"
+
+ # important execute this line in terminal to create resources for app icons
+ # flutter packages pub run flutter_launcher_icons:main
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
